[package]
name = "rain-error-decoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.14", features = [
  "legacy",
  "ledger",
] }
alloy-primitives = { version = "0.6.3", features = ["rand"] }
alloy-sol-types = { version = "0.6.3" }
alloy-json-abi = "0.6.3"
alloy-dyn-abi = "0.6.3"
once_cell = "1.17.1"
reqwest = { version = "0.11.17", features = ["json"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
serde = "1.0.195"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2.11", features = ["js", "js-sys"] }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.70"

[lints.clippy]
all = "warn"

